[package]
name = "http-auth"
version = "0.2.0"
authors = ["kanishkarj <kanishkarj@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
proxy-wasm = "0.2.0"
wasm-bindgen = "0.2"